<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/delete_all_records"
        android:padding="5dp"
        android:src="@drawable/outline_delete_forever_black_48" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="20dp"
        android:text="@string/delete"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/contentTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"

        android:paddingRight="24dp"
        android:paddingBottom="24dp"
        android:text="@string/are_you_sure_you_want_to_permanently_delete_all_records"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/showTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="5dp"
            android:text="@string/yes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent"
            tools:ignore="KeyboardInaccessibleWidget" />

        <TextView
            android:id="@+id/cancelTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:minHeight="48dp"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent"
            tools:ignore="KeyboardInaccessibleWidget" />

    </LinearLayout>

</LinearLayout>