<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.battledwarf.scorereaper.Activity_Home_Page">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F0F0">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="6">

            <ImageView
                android:layout_width="216dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/StofLogo"
                app:srcCompat="@drawable/beardscull_gif" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/butCheckpoint"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="144dp"
                android:layout_height="60dp"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/scoring"
                app:icon="@drawable/outline_calculate_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/butLaps"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="144dp"
                android:layout_height="60dp"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/stopwatch"
                app:icon="@drawable/outline_timer_24" />

        </GridLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
