<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.battledwarf.scorereaper.settings.settings_data_management">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/scorereaper_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beardscull_gif" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDeleteDataPoints"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/delete_points_data"
        app:icon="@drawable/outline_delete_forever_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDeleteDataLaps"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/delete_laps_data"
        app:icon="@drawable/outline_delete_forever_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteDataPoints" />


</androidx.constraintlayout.widget.ConstraintLayout>


